Mention JDK 16+ module opens requirements
Otherwise they'll fail at runtime due to some internal reflection that's otherwise locked down and enforced by the JDK on 16+.